--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
 <title>For Ammu 💖</title>
 
 <style>
-* {
-    box-sizing: border-box;
-}
+* { box-sizing: border-box; }
 
 body {
     margin: 0;
     height: 100vh;
-    overflow: hidden;
     font-family: 'Comic Sans MS', cursive;
     display: flex;
     justify-content: center;
@@ -21,7 +18,8 @@ body {
     text-align: center;
     background: linear-gradient(135deg, #ff9a9e, #fad0c4, #fbc2eb, #a18cd1);
     background-size: 400% 400%;
-    animation: gradientBG 10s ease infinite;
+    animation: gradientBG 12s ease infinite;
+    overflow: hidden;
     padding: 20px;
 }
 
@@ -33,43 +31,66 @@ body {
 
 .container {
     width: 100%;
-    max-width: 500px;
+    max-width: 600px;
+    position: relative;
+    z-index: 2;
 }
 
 h1 {
-    font-size: 2rem;
+    font-size: clamp(1.8rem, 4vw, 3rem);
     color: white;
-    text-shadow: 2px 2px 10px #ff4da6;
-    margin-bottom: 30px;
+    text-shadow: 2px 2px 12px #ff4da6;
+    margin-bottom: 40px;
+}
+
+.button-wrapper {
+    position: relative;
+    height: 120px;
 }
 
 button {
-    padding: 14px 24px;
+    padding: 14px 28px;
     font-size: 1rem;
-    margin: 10px;
     border: none;
-    border-radius: 30px;
+    border-radius: 40px;
     cursor: pointer;
-    transition: 0.3s;
-    min-width: 120px;
+    transition: 0.25s ease;
+    min-width: 130px;
 }
 
 #yesBtn {
     background-color: #ff4da6;
     color: white;
-}
-
-#yesBtn:active {
-    transform: scale(1.1);
+    margin-right: 20px;
+    transform: scale(1);
 }
 
 #noBtn {
     background-color: white;
     color: #ff4da6;
     position: absolute;
+    left: 180px;
 }
 
-/* Sparkles */
+/* Popup */
+.popup {
+    position: fixed;
+    top: 20px;
+    background: white;
+    color: #ff4da6;
+    padding: 10px 20px;
+    border-radius: 20px;
+    font-weight: bold;
+    box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+    animation: fadeOut 1.5s forwards;
+}
+
+@keyframes fadeOut {
+    0% { opacity: 1; }
+    100% { opacity: 0; transform: translateY(-20px); }
+}
+
+/* Sparkle */
 .sparkle {
     position: absolute;
     width: 6px;
@@ -93,21 +114,21 @@ button {
 }
 
 @keyframes floatUp {
-    0% { transform: translateY(100vh) scale(0.5); opacity: 1; }
-    100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
+    0% { transform: translateY(100vh) scale(0.6); opacity: 1; }
+    100% { transform: translateY(-10vh) scale(1.4); opacity: 0; }
 }
 
 /* Final Screen */
 .final-screen {
+    position: fixed;
+    inset: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    padding: 20px;
-    text-align: center;
     background: linear-gradient(135deg, #ff9a9e, #fad0c4);
     color: white;
-    font-size: 1.6rem;
+    font-size: clamp(1.5rem, 4vw, 2.5rem);
+    padding: 20px;
 }
 </style>
 </head>
@@ -115,30 +136,74 @@ button {
 <body>
 
 <div class="container">
-    <h1>Will you be my Valentine ? 💖</h1>
-    <button id="yesBtn">YES 💕</button>
-    <button id="noBtn">NO 🙈</button>
+    <h1>Will you be my Ammu forever? 💖</h1>
+
+    <div class="button-wrapper">
+        <button id="yesBtn">YES 💕</button>
+        <button id="noBtn">NO 🙈</button>
+    </div>
 </div>
+
+<!-- Cute Sound -->
+<audio id="popSound" src="https://assets.mixkit.co/sfx/preview/mixkit-bubble-pop-up-alert-notification-2357.mp3"></audio>
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 <script>
 const noBtn = document.getElementById("noBtn");
+const yesBtn = document.getElementById("yesBtn");
+const popSound = document.getElementById("popSound");
 
+let yesScale = 1;
+let noScale = 1;
+
+// Move NO + effects
 function moveNoButton() {
-    const x = Math.random() * (window.innerWidth - 120);
-    const y = Math.random() * (window.innerHeight - 60);
+
+    popSound.currentTime = 0;
+    popSound.play();
+
+    // Grow YES
+    yesScale += 0.15;
+    yesBtn.style.transform = `scale(${yesScale})`;
+
+    // Shrink NO
+    noScale -= 0.05;
+    if (noScale < 0.4) noScale = 0.4;
+    noBtn.style.transform = `scale(${noScale})`;
+
+    // Move NO randomly
+    const wrapper = document.querySelector(".button-wrapper");
+    const maxX = wrapper.offsetWidth - 120;
+    const maxY = wrapper.offsetHeight - 50;
+
+    const x = Math.random() * maxX;
+    const y = Math.random() * maxY;
+
     noBtn.style.left = x + "px";
     noBtn.style.top = y + "px";
+
+    showPopup();
 }
 
 noBtn.addEventListener("mouseover", moveNoButton);
 noBtn.addEventListener("touchstart", moveNoButton);
 
-document.getElementById("yesBtn").addEventListener("click", () => {
+// Fake popup
+function showPopup() {
+    const popup = document.createElement("div");
+    popup.className = "popup";
+    popup.innerText = "Are you sure? 😏";
+    document.body.appendChild(popup);
+
+    setTimeout(() => popup.remove(), 1500);
+}
+
+// YES click
+yesBtn.addEventListener("click", () => {
     confetti({
-        particleCount: 250,
-        spread: 150,
+        particleCount: 300,
+        spread: 160,
         origin: { y: 0.6 }
     });
 
@@ -155,8 +220,13 @@ document.getElementById("yesBtn").addEventListener("click", () => {
 function createSparkle(e) {
     const sparkle = document.createElement("div");
     sparkle.className = "sparkle";
-    sparkle.style.left = (e.touches ? e.touches[0].pageX : e.pageX) + "px";
-    sparkle.style.top = (e.touches ? e.touches[0].pageY : e.pageY) + "px";
+
+    const x = e.touches ? e.touches[0].pageX : e.pageX;
+    const y = e.touches ? e.touches[0].pageY : e.pageY;
+
+    sparkle.style.left = x + "px";
+    sparkle.style.top = y + "px";
+
     document.body.appendChild(sparkle);
     setTimeout(() => sparkle.remove(), 600);
 }
@@ -165,4 +235,17 @@ document.addEventListener("mousemove", createSparkle);
 document.addEventListener("touchmove", createSparkle);
 
 // Floating Hearts
-setInterval
+setInterval(() => {
+    const heart = document.createElement("div");
+    heart.className = "heart";
+    heart.innerHTML = "💖";
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.fontSize = (Math.random() * 18 + 12) + "px";
+    heart.style.animationDuration = (Math.random() * 3 + 3) + "s";
+    document.body.appendChild(heart);
+    setTimeout(() => heart.remove(), 6000);
+}, 700);
+</script>
+
+</body>
+</html>
