--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@ body {
     background-size: 400% 400%;
     animation: gradientBG 12s ease infinite;
     overflow: hidden;
-    padding: 20px;
 }
 
 @keyframes gradientBG {
@@ -34,6 +33,7 @@ body {
     max-width: 600px;
     position: relative;
     z-index: 2;
+    padding: 20px;
 }
 
 h1 {
@@ -43,34 +43,76 @@ h1 {
     margin-bottom: 40px;
 }
 
-.button-wrapper {
-    position: relative;
-    height: 160px;
-}
-
 button {
     padding: 14px 28px;
     font-size: 1rem;
     border: none;
     border-radius: 40px;
     cursor: pointer;
-    transition: 0.25s ease;
+    transition: 0.3s ease;
     min-width: 130px;
+    margin: 10px;
 }
 
 #yesBtn {
     background-color: #ff4da6;
     color: white;
-    position: absolute;
-    left: 0;
+    transform: scale(1);
 }
 
 #noBtn {
     background-color: white;
     color: #ff4da6;
+    transform: scale(1);
+}
+
+/* Popup */
+.popup {
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    background: white;
+    padding: 20px 30px;
+    border-radius: 20px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+    font-size: 1.2rem;
+    color: #ff4da6;
+    z-index: 5;
+    animation: popUp 0.3s ease;
+}
+
+@keyframes popUp {
+    from { transform: translateX(-50%) scale(0.7); opacity: 0; }
+    to { transform: translateX(-50%) scale(1); opacity: 1; }
+}
+
+/* Sparkles */
+.sparkle {
     position: absolute;
-    left: 200px;
-    opacity: 1;
+    width: 6px;
+    height: 6px;
+    background: white;
+    border-radius: 50%;
+    pointer-events: none;
+    animation: sparkleFade 0.6s linear forwards;
+}
+
+@keyframes sparkleFade {
+    0% { opacity: 1; transform: scale(1); }
+    100% { opacity: 0; transform: scale(2); }
+}
+
+/* Floating Hearts */
+.heart {
+    position: absolute;
+    color: rgba(255,255,255,0.8);
+    animation: floatUp 6s linear infinite;
+}
+
+@keyframes floatUp {
+    0% { transform: translateY(100vh) scale(0.6); opacity: 1; }
+    100% { transform: translateY(-10vh) scale(1.4); opacity: 0; }
 }
 
 /* Final Screen */
@@ -80,15 +122,15 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
     background: linear-gradient(135deg, #ff9a9e, #fad0c4);
     color: white;
     font-size: clamp(1.5rem, 4vw, 2.5rem);
     padding: 20px;
-    z-index: 2;
+    text-align: center;
+    z-index: 3;
 }
 
-/* Floating Image */
+/* Floating image */
 .floating-image {
     position: fixed;
     width: 220px;
@@ -111,14 +153,12 @@ button {
 
 <audio id="bgMusic" src="bgmusic.mp3" loop></audio>
 <audio id="drumroll" src="drumroll.mp3"></audio>
+<audio id="popSound" src="pop.mp3"></audio>
 
 <div class="container">
     <h1>Will you be my Ammu forever? 💖</h1>
-
-    <div class="button-wrapper">
-        <button id="yesBtn">YES 💕</button>
-        <button id="noBtn">NO 🙈</button>
-    </div>
+    <button id="yesBtn">YES 💕</button>
+    <button id="noBtn">NO 🙈</button>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
@@ -128,38 +168,46 @@ const yesBtn = document.getElementById("yesBtn");
 const noBtn = document.getElementById("noBtn");
 const bgMusic = document.getElementById("bgMusic");
 const drumroll = document.getElementById("drumroll");
+const popSound = document.getElementById("popSound");
 
-let noAttempts = 0;
+let scaleYes = 1;
+let scaleNo = 1;
 
-/* Start background music on first tap/click */
+/* Start music on first tap */
 document.addEventListener("click", () => {
     bgMusic.play();
 }, { once: true });
 
-/* YES chases cursor/finger */
-function chaseYes(e) {
-    const x = e.touches ? e.touches[0].pageX : e.pageX;
-    const y = e.touches ? e.touches[0].pageY : e.pageY;
+/* NO impossible to touch */
+function escapeNo() {
+    popSound.play();
 
-    yesBtn.style.left = (x - 60) + "px";
-    yesBtn.style.top = (y - 20) + "px";
-}
+    scaleYes += 0.15;
+    scaleNo -= 0.1;
 
-document.addEventListener("mousemove", chaseYes);
-document.addEventListener("touchmove", chaseYes);
+    yesBtn.style.transform = `scale(${scaleYes})`;
+    noBtn.style.transform = `scale(${scaleNo})`;
 
-/* NO fades away */
-function handleNo() {
-    noAttempts++;
-    noBtn.style.opacity = 1 - (noAttempts * 0.2);
+    // Move NO randomly
+    noBtn.style.position = "absolute";
+    noBtn.style.left = Math.random() * (window.innerWidth - 100) + "px";
+    noBtn.style.top = Math.random() * (window.innerHeight - 50) + "px";
 
-    if (noAttempts >= 5) {
+    // Fake popup
+    const popup = document.createElement("div");
+    popup.className = "popup";
+    popup.innerText = "Are you sure? 😏";
+    document.body.appendChild(popup);
+
+    setTimeout(() => popup.remove(), 1000);
+
+    if (scaleNo <= 0.2) {
         noBtn.style.display = "none";
     }
 }
 
-noBtn.addEventListener("mouseover", handleNo);
-noBtn.addEventListener("touchstart", handleNo);
+noBtn.addEventListener("mouseover", escapeNo);
+noBtn.addEventListener("touchstart", escapeNo);
 
 /* YES Click */
 yesBtn.addEventListener("click", () => {
@@ -185,6 +233,33 @@ yesBtn.addEventListener("click", () => {
 
     }, 2000);
 });
+
+/* Sparkles */
+document.addEventListener("mousemove", createSparkle);
+document.addEventListener("touchmove", createSparkle);
+
+function createSparkle(e) {
+    const sparkle = document.createElement("div");
+    sparkle.className = "sparkle";
+    const x = e.touches ? e.touches[0].pageX : e.pageX;
+    const y = e.touches ? e.touches[0].pageY : e.pageY;
+    sparkle.style.left = x + "px";
+    sparkle.style.top = y + "px";
+    document.body.appendChild(sparkle);
+    setTimeout(() => sparkle.remove(), 600);
+}
+
+/* Floating hearts */
+setInterval(() => {
+    const heart = document.createElement("div");
+    heart.className = "heart";
+    heart.innerHTML = "💖";
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.fontSize = (Math.random() * 18 + 12) + "px";
+    heart.style.animationDuration = (Math.random() * 3 + 3) + "s";
+    document.body.appendChild(heart);
+    setTimeout(() => heart.remove(), 6000);
+}, 700);
 </script>
 
 </body>
