--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ button {
 <audio id="popSound" src="pop.mp3"></audio>
 
 <div class="container">
-    <h1>Will you be my Ammu forever? 💖</h1>
+    <h1>Will you be my Valentine ? 💖</h1>
     <button id="yesBtn">YES 💕</button>
     <button id="noBtn">NO 🙈</button>
 </div>
@@ -193,7 +193,7 @@ function escapeNo() {
 
     const popup = document.createElement("div");
     popup.className = "popup";
-    popup.innerText = "Are you sure? 😏";
+    popup.innerText = "Are you sure patti ? 😏";
     document.body.appendChild(popup);
 
     setTimeout(() => popup.remove(), 1000);
